--- a/style.css
+++ b/style.css
@@ -984,3 +984,16 @@ header .wrapper .logo {
 }
 
 /* ////SOCIAL PROOF REVIEWS SECTION END//// */
+
+/* ////SERVICES SECTION START//// */
+.services{
+    height: 200vh;
+    width: 100vw;
+}
+.services .wrapper{
+    height: 100%;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+}
+/* ////SERVICES SECTION END//// */
